kubernetes/placeholder-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: placeholder-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: placeholder
  template:
    metadata:
      labels:
        component: placeholder
    spec:
      containers:
        - name: placeholder
          image: ronaimate/placeholder
          ports:
            - containerPort: 8080
